# event-hub

./: Cargo.toml
src/: main.rs
src/application/: app_service.rs
src/domain/device/: entity.rs  id.rs  mod.rs  name.rs  state.rs
src/infrastructure/: mod.rs
src/infrastructure/integrations/zigbee2mqtt/: client.rs  commands.rs  subscriptions.rs
src/integrations/zigbee2mqtt/: events.rs  mod.rs
src/presentation/http/: accounts.rs  mod.rs  routes.rs  state.rs
src/transport/: mod.rs
src/transport/mqqt/: client.rs
src/transport/mqtt/: client.rs
