[package]
name = "event-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.24"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
